<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.dhillon.dupeitv2.MainLoginActivity">

    <EditText
    android:id="@+id/etEmail"

    android:layout_width="280dp"
    android:layout_height="wrap_content"
        android:ems="10"
    android:inputType="textEmailAddress"
    android:hint="@string/EmailHint"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/etPass"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/etPass"

        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/PassHint"
        android:textColor="@color/WhiteText"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/checkBox"
        android:layout_alignStart="@+id/etEmail" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/txtBtnLogin"
        android:background="@color/LgnColor"
        android:layout_above="@+id/tvRegLink"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp" />

    <TextView
        android:id="@+id/tvRegLink"
        android:textSize="18dp"
        android:textColor="@color/LinkTexts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/etPass"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="63dp"

        android:text="@string/RegLink" />

    <TextView
        android:id="@+id/tvPassForgot"
        android:textSize="18dp"
        android:textColor="@color/LinkTexts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/etPass"
        android:layout_alignTop="@+id/tvRegLink"
        android:text="Forgot Password?" />

    <CheckBox
        android:id="@+id/checkBox"
        android:textSize="12dp"
        android:textColor="@color/WhiteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbRememberMe"
        android:layout_marginBottom="11dp"
        android:layout_above="@+id/btnLogin"
        android:layout_alignStart="@+id/etPass"
        android:layout_marginStart="20dp" />

   <!-- <ProgressBar
        android:id="@+id/progbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etPass"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp" />-->


</RelativeLayout>
